tests/NormalTests/paczka1/fuzzy1/33468880.err
Error in line 2: S249 S340 45,9
Error in line 5: OqaTAuOn2Eo S249 28,3
Error in line 6: qv0V S249 57,2
